@@ -1,0 +1,6 @@
+name: adventure_bot
+dependencies:
+  - python=3.8
+  - pip
+  - pip:
+    - -r requirements.txt
