@@ -1,4 +1,7 @@
-1. create virtual enviroment to run code 
-2. Setup test code for notion api 
-3. setup test code for openai api 
-4. update requirements and gitignore files 
+1. fix error: (base) sebastianbotha@SebastinsLaptop adventure_bot % /Users/sebastianbotha/miniconda3/envs/adventure_bot/bin/python /Users/sebastianbotha/Documents/Python/
+adventure_bot/src/main.py
+{
+    "error": "\n\nYou tried to access openai.ChatCompletion, but this is no longer supported in openai>=1.0.0 - see the README at https://github.com/openai/openai-python for the API.\n\nYou can run `openai migrate` to automatically upgrade your codebase to use the 1.0.0 interface. \n\nAlternatively, you can pin your installation to the old version, e.g. `pip install openai==0.28`\n\nA detailed migration guide is available here: https://github.com/openai/openai-python/discussions/742\n"
+}
+
+
