@@ -2,3 +2,6 @@
 11 AUG 2024 - 11:49
 updated the reference documents to include all relevant file
 
+--
+11 AUG 2024 - 12:30
+Installed openai packages and simple test working, but main returning error to fix 
